# ebus-thelia-condens-ha

./: .gitignore  .pylintrc  LICENSE  README.MD.md  README.md  main.py  main_service.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
config/: config.yaml
ebus_core/: __init__.py  connection.py  crc.py  telegram.py
rrd/: create_rrd.sh
scripts/: calculations.py  collector.py  condensation.py  curve_recommendation.py  diagnostics.py  main.py  mqtt_publish.py  rrd_store.py  taktowanie.py
src/: ebus_codec.py  ebus_direct_reader.py  ebus_reader.py  heater_controller.py  main.py  mqtt_publisher.py  parser..py
src/utils/: check_uart.py  config_loader.py  logger.py  raw_listem.py
tests/: debug_bytes.py  debug_capture.py  debug_dhw_tank.py  debug_history.py  debug_raw.py  debug_temps.py  find_modulation.py  query_stats.py  test_adapter_reset.py  test_connection_query.py  test_debug_raw.py  test_live.py  test_main_service.py  test_mipro.py  test_mqtt.py  test_parser.py  test_parser_regression.py
thelia/: __init__.py  adapter_reset.py  alerts.py  messages.py  mqtt.py  parser.py
tools/: __iniit__.py  capture.py
